# HudlDistortionCorrectionTool

./: CMakeLists.txt  CONTRIBUTING.md  DistortionCorrection.cpp  README.md
CameraCalibrator/: CameraCalibrator.cpp  CameraCalibrator.h
ExampleData/: DistCoeffs.yaml
Undistorter/: Undistorter.cpp  Undistorter.hpp
cvui/: cvui.cpp  cvui.h
